--- a/templates/base.html
+++ b/templates/base.html
@@ -7,14 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
-
-    <div class="container">
-        {% block content %} {% endblock %}
-    </div>
+      {% block content %} {% endblock %}
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
